# cv-generator

./: .gitignore  README.md  cv_analyzer.py  cv_generator.py  cv_renderer.py  llm.py  main.py  models.py  pyproject.toml  streamlit_app.py  system_prompt.txt
templates/: cv_template.html
text/: __init__.py  base.py  en.py
