[project]
name = "cv-generator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.2.3",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.7",
    "langchain-ollama>=1.0.1",
    "pydantic>=2.12.5",
    "pypdf>=6.6.0",
    "streamlit>=1.52.2",
]
